--- a/DATA583_Submission/583FinalReport.Rmd
+++ b/DATA583_Submission/583FinalReport.Rmd
@@ -636,7 +636,7 @@ polygon(plot_den, col = rgb(0.78, 0.89, 1, alpha = 0.6))
 
 The two goals to evaluate and conclude during this project are a) to identify and arrive at a parsimonious model that can predict life expectancy to a level of >80% with less variables than the orginal dataset b) to evaluate and show that a complex and mixed-type dataset is less likely to have all the predictor variables linearly related to the output response variable and thus likely will require a more flexible and complex model for better performance. On a side note, it is also an indicator that predicting life expectancy is complex. 
 
-Both have been successfully evaluated during the course of the project and the conclusion is that life expectancy is by nature not a normally distributed response variable. Performing simple linear regression modelling on this complex data is not sufficient or valid. There are two models that are identified that can be used to predict life expectancy with $R^2$ of more than 80% aka the two models are able to explain variation in life expectancy more than 80%
+Both have been successfully evaluated during the course of the project and the conclusion is that life expectancy is by nature not a normally distributed response variable. Performing simple linear regression modelling on this complex data is not sufficient or valid. There are two models that are identified that can be used to predict life expectancy with $R^2$ of more than 80% aka the two models are able to explain variation in life expectancy more than 80%.
 
 The nonparametric model has a higher $R^2$ of 87%(approx) when compared to the parametric model $R^2$ of 83%(approx). So, it is concluded that nonparametric model fits the given dataset better and is selected as the best one among all assessed models for use of predicting life expectancy.
 
